k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-api
  labels:
    app.kubernetes.io/name: demo-api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: k8s-observability-stack
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: demo-api
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
